@startuml
interface main.java.com.lab111.labwork5.Iterable {
~ Iterator<T> iterator()
~ void directOrder(Iterator<T>)
~ void reverseOrder(Iterator<T>)
}
class main.java.com.lab111.labwork5.MyIterator {
- List<T> collection
- int headPosition
- int tailPosition
+ boolean hasNext()
+ boolean hasPrevious()
+ T next()
+ T previous()
}
class main.java.com.lab111.labwork5.MyCollection {
- List<T> elements
- String[] stringTestList
- Integer[] intTestList
+ void addItem(T)
+ void addStringList()
+ void addIntList()
+ Iterator<T> iterator()
+ void directOrder(Iterator<T>)
+ void reverseOrder(Iterator<T>)
}
interface main.java.com.lab111.labwork5.Iterator {
~ boolean hasNext()
~ boolean hasPrevious()
~ T next()
~ T previous()
}


main.java.com.lab111.labwork5.Iterator <|.. main.java.com.lab111.labwork5.MyIterator
main.java.com.lab111.labwork5.Iterable <|.. main.java.com.lab111.labwork5.MyCollection
@enduml